Fix clipping of descriptions.

--- a/components/workspace/prop/ProposalLine.module.css
+++ b/components/workspace/prop/ProposalLine.module.css
@@ -65,7 +65,7 @@
 	align-items: center;
 
 	width: 100%;
-	height: 12vh;
+	height: 15vh;
 }
 
 .propIcon {
@@ -143,6 +143,12 @@
 
 	.propStat h1 {
 		font-size: 1em;
+	}
+}
+
+@media only screen and (max-width: 1560px) {
+	.leftInfo {
+		margin-right: 5%;
 	}
 }
 
